Anh-Khoi: add ValidationUtil, adjust register controller, OTP flow
